# rust-bundler

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  coverage.sh
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: bin.rs  golden.rs
tests/testdata/input/complicated/: Cargo.toml
tests/testdata/input/complicated/src/: b.rs  main.rs
tests/testdata/input/complicated/src/c/: mod.rs
tests/testdata/input/hello-world/: Cargo.toml
tests/testdata/input/rust_codeforce_template/: Cargo.toml  LICENSE  run_with_bundle.sh  version
tests/testdata/input/rust_codeforce_template/src/: lib.rs  main.rs  pr.rs
tests/testdata/input/simple/: Cargo.toml
tests/testdata/input/simple/src/: lib.rs  main.rs
tests/testdata/output/: complicated.rs  hello-world.rs  rust_codeforce_template.rs
