[package]
name = "bundler"
version = "0.1.1"
authors = ["Slava Shklyaev <slava@slava.sh>"]
description = "Creates a single-source-file version of a Cargo package."
documentation = "https://docs.rs/bundler"
homepage = "https://github.com/slava-sh/rust-bundler"
repository = "https://github.com/slava-sh/rust-bundler"
keywords = ["single-file", "bundle", "merge", "expand", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "slava-sh/rust-bundler" }
codecov = { repository = "slava-sh/rust-bundler" }

[[bin]]
name = "bundle"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.5"
quote = "0.5"
rustfmt-nightly = "0.6"
syn = { version = "0.13", features = ["full", "extra-traits", "visit-mut"] }

[dev-dependencies]
goldenfile = "0.5"
assert_cli = "0.5"
