[package]
name = "bundler"
version = "0.1.1"
authors = ["Slava Shklyaev <slava@slava.sh>"]
description = "Creates a single-source-file version of a Cargo package."
documentation = "https://docs.rs/bundler"
homepage = "https://github.com/slava-sh/rust-bundler"
repository = "https://github.com/slava-sh/rust-bundler"
keywords = ["single-file", "bundle", "merge", "expand", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "slava-sh/rust-bundler" }
codecov = { repository = "slava-sh/rust-bundler" }

[[bin]]
name = "bundle"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.12.1"
syn = { version = "1.0.73", features = ["full", "printing", "visit-mut"] }
rustfmt-nightly = { version = "1.4.21", optional = true }

[dev-dependencies]
goldenfile = "1.1.0"
assert_cli = "0.6.3"

[features]
inner_rustfmt = ["rustfmt-nightly"]
